<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">LP</string>
    <string name="appname" translatable="false">Let\'s ping</string>
    <string name="subnet">subnet</string>
    <string name="title_activity_conf" translatable="false">ConfActivity</string>
    <string name="title_activity_inet" translatable="false">InetActivity</string>
    <string name="title_activity_azs_activity" translatable="false">Azs_activity</string>
    <string name="AZS">AZS</string>
    <string name="connect">Connect...</string>
    <string name="connect_fail">Connect FAIL!</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="full_access">Full access</string>
    <string name="list_azs">List AZS</string>
    <string name="settings">Settings</string>
    <string name="updated">Updated</string>
    <string name="update">Update...</string>
    <string name="server">Server: </string>
    <string name="port">Port</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="dd" translatable="false"> : </string>
    <string name="ip" translatable="false">IP:</string>
    <string name="presub" translatable="false">10.0.</string>
    <string name="d" translatable="false">.</string>
    <string name="hours">Hours</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="exit">Exit</string>
    <string name="hour">Hour</string>
    <string name="open">Open</string>
    <string name="version">Version:</string>
    <string name="get_update">Update</string>
    <string name="have_latest_version">You have the latest version</string>
    <string name="new_version">New version is available</string>
    <string name="downloading_update">Downloading update ...</string>
    <string name="black_list">Black list</string>
    <string name="block">Block</string>
    <string name="all_connected">All Connected.</string>
    <string name="ok">Ok</string>
    <string name="no_connection">No connection</string>

</resources>
